<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, AndroidDemoActivity!</string>
    <string name="app_name">AndroidDemo</string>
    <string name="switch_flash_on">On</string>
    <string name="switch_flash_off">Off</string>
    <string name="switch_to_on">Start&#8230;</string>
    <string name="switch_to_off">Stop&#8230;</string>
    <string name="flash_light">FlashLight</string>
    <string name="state_start">Start</string>
    <string name="state_stop">Stop</string>
    <string name="state_antialias">Antialias</string>
    <string name="state_sawtooth">Aawtooth</string>
    <string name="dialog_pos_up">Position Up</string>
    <string name="dialog_pos_bottom">Position Bottom</string>
    <string name="dialog_pos_left">Position Left</string>
    <string name="dialog_pos_right">Position Right</string>
    <string name="open_float_win">Open Floating Window</string>
    <string name="close_float_win">Close Floating Window</string>
    <string name="test_rss">Start Test</string>
    <string name="test_result">Test Result</string>
    <string name="test_process">Test Process</string>
    <string name="start_execute">Execute</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    
    <string name="http_get">HttpGet</string>
    <string name="http_post">HttpPost</string>
    <string name="button_text_getxml">GetXml</string>
    
    <string name="first_layout">First Layout</string>
    <string name="second_layout">Second Layout</string>
    <string name="third_layout">Third Layout</string>
    
    <string name="aidl_start">Aidl start</string>
    <string name="aidl_result">Aidl result</string>
    <string name="download">Download</string>
    <string name="go">Go</string>
    <string name="rss_news">RssNews</string>
    <string name="showhtml">ShowHtml</string>
    <string name="add_account">Add Account</string>
    <string name="tips_add_feed">The Custom Feed :</string>
    <string name="button_add_feed">Add</string>
    <string name="lamp_error"><h1>Lamp Error</h1>\nCan \'t open hardware</string>
    <string-array name="city">
        <item>Beijing</item>
        <item>Shanghai</item>
        <item>Nanjing</item>
        <item>Tianjin</item>
        <item>Wuhan</item>
        <item>Zhengzhou</item>
        <item>Hefei</item>
        <item>Guiyang</item>
        <item>Guangzhou</item>
        <item>Shenzhen</item>
        <item>Fuzhou</item>
        <item>Xiamen</item>
        <item>Zhuhai</item> 
        <item>Haerbin</item>
        <item>Wulumuqi</item>
        <item>Yinchuan</item>
    </string-array>
    
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="forth">4</string>
    <string name="five">5</string>
</resources>