<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <Button 
        android:id="@+id/dialog_up"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_pos_up"
        />
    <Button 
        android:id="@+id/dialog_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_pos_bottom"
        />
    <Button 
        android:id="@+id/dialog_left"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_pos_left"
        />
    <Button 
        android:id="@+id/dialog_right"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_pos_right"
        />
</LinearLayout>