<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal" 
    >
    <Button 
        android:id="@+id/switch_flash_lamp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_flash_on"
        />

    <Switch
        android:id="@+id/switch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textOn="@string/switch_flash_on"
        android:textOff="@string/switch_flash_off"
        />

    <CheckedTextView
        android:id="@+id/checkedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/flash_light"
        android:checked="false" 
        android:checkMark="@drawable/item_checkable"
        android:onClick="onClick"
        />

</LinearLayout>