<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <EditText 
        android:id="@+id/http_url"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <Button 
	        android:id="@+id/http_get"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/http_get" android:layout_weight="1.0"/>
	    <Button 
	        android:id="@+id/http_post"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/http_post"
	        android:layout_weight="1.0"/>
    </LinearLayout>
    <ScrollView 
        android:id="@+id/http_scrollview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <TextView 
            android:id="@+id/http_test_result"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:hint="@string/test_process"
            android:autoLink="all"
            />
    </ScrollView>
</LinearLayout>