<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:layoutAnimation="@anim/layoutanimation"
    >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        >
	    <EditText 
	        android:id="@+id/url"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1.0"
	        android:inputType="textWebEditText"
	        />
	    <Button 
	        android:id="@+id/download_html"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="4.0"
	        android:text="@string/go"
	        android:onClick="onClick"
	        />
    </LinearLayout>
    <Button 
        android:id="@+id/rss_news"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/rss_news"
        android:onClick="onClick"
        />
    <Button 
        android:id="@+id/showhtml"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/showhtml"
        android:onClick="onClick"
        />
    <WebView 
        android:id="@+id/webview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
</LinearLayout>